Fixed intro article beight too high withour need to

--- a/docs/sivo/css/visualEffects/lines.css
+++ b/docs/sivo/css/visualEffects/lines.css
@@ -15,7 +15,7 @@
 {
 	text-align: right;
 	width: 92%;
-	min-height: 500px;
+	min-height: 250px;
 	max-height: 1000px;
 	float:right;
 	margin: auto;
